--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^3.3.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
